Css for new commentaire

--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -1,2 +1,3 @@
 eclipse.preferences.version=1
 encoding//src/main/java/com/esiea/lookat/dao/SiteDaoImpl.java=UTF-8
+encoding//src/main/webapp/WEB-INF/views/addcoms.jsp=UTF-8
