--- a/src/main/java/com/esiea/lookat/dao/dao.properties
+++ b/src/main/java/com/esiea/lookat/dao/dao.properties
@@ -1,4 +1,4 @@
-url=jdbc:mysql://localhost:3306/lookat
+url=jdbc:mysql://localhost:3306/lookat?useUnicode=true&characterEncoding=utf8
 driver=com.mysql.jdbc.Driver
 nomutilisateur=lookat
 motdepasse=123456
